# filters

./: Makefile  README.md  filter.py  plot.sh  pyproject.toml  requirements.txt  setup.py  test.py
data/: 1_81  weights
filter/: __main__.py  ab.py  cli.py  cli.toml  convolve.py  internals.py  kalman.py
rng/: __main__.py  cli.py  cli.toml  internals.py  normal.py  notrandom.py  uniform.py
