[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["filter", "rng"]

[project]
name = "filters"
description = "Command line data filtering and generation"
readme = "README.md"
version = "1.0.3"
authors = [ { name = "Dominic Ricottone", email = "me@dominic-ricottone.com" } ]
urls = { source = "git.dominic-ricottone.com/~dricottone/filters" }
license = { file = "LICENSE.md" }
requires-python = ">=3.6"

[project.scripts]
filter = "filter.__main__:main"
rng = "rng.__main__:main"

